--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,86 @@
 .App {
-  text-align: center;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+    background-color: whitesmoke;
 }
 
-.App-logo {
-  height: 40vmin;
+.calculator {
+    display: flex; 
+    flex-direction: column;
+    border: 3px solid black;
+    border-radius: 3px;
+    box-shadow: 5px 5px 8px darkgray;
+    width: 20vw; 
+    height: 60vh; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.calculator-display {
+    display: flex; 
+    justify-content: flex-end; 
+    align-items: flex-end;
+    height: 20%; 
+    padding-right: 4px; 
+    background-color: black;
+    border: groove;
+    color: white; 
+    font-size: 250%;
 }
 
-.App-link {
-  color: #09d3ac;
+.calculator-keypad {
+    display: flex; 
+    height: 80%;
+    width: 100%;
 }
+.key-set1 {
+    display: flex; 
+    flex-direction: column;
+    width: 75%;
+}
+.keys {
+    width: 64px;
+    height: 64px;
+    font-size: 80%;
+    font-weight: 600;
+}
+
+.function-keys {
+    display: flex; 
+}
+.function-keys button {
+    background-color: lightgray;
+    border: groove; 
+}
+.numeric-keys {
+    display: flex; 
+    flex-wrap: wrap;
+    height: 82%;
+}
+.numeric-keys button {
+    background-color: gray;
+    color: white; 
+    border: groove;
+}
+.key-0 {
+    width: 128px;
+}
+
+.key-set2 {
+    display: flex; 
+    flex-direction: column;
+    width: 25%;
+}
+.operator-keys {
+    display: flex; 
+    flex-direction: column;
+}
+
+.operator-keys button {
+    background-color: rgb(247, 160, 0);
+    color: white; 
+    font-size: 110%;
+    border: groove;
+}
+
