set event handler to set state for each numeric-key pressed

--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -50,8 +50,7 @@
     display: flex; 
 }
 .function-keys button {
-    /* background-color: lightgray; */
-    background-color: yellow; 
+    background-color: lightgray;    
     border: groove; 
 }
 .numeric-keys {
